npm update and fix mobile header bug

--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -6,14 +6,14 @@
   }
 
   &__nav {
-    @apply fixed bottom-0 left-0 right-0 mb-6 mx-6 grid grid-cols-4 text-center rounded overflow-hidden leading-none shadow text-xs z-20;
+    @apply fixed bottom-0 left-0 right-0 mb-8 mx-6 grid grid-cols-4 text-center rounded overflow-hidden leading-none shadow text-xs z-20;
 
     @media(min-width: 21em) {
-      @apply text-sm mb-0 mx-8;
+      @apply text-sm mx-8;
     }
 
     @media(min-width: 48em) {
-      @apply text-base relative;
+      @apply text-base mb-0 relative;
     }
   }
 
