add daily health app

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <h1 class="sr-only">Portfolio</h1>
-    {{ $pages := slice (.Site.GetPage "/kvcc-employee-portal") (.Site.GetPage "/groceries-list-app") (.Site.GetPage "/kvcc-sign-in") (.Site.GetPage "/kvcc-employee-directory") (.Site.GetPage "/kvcc-online-training") (.Site.GetPage "/kvcc-department-directory") (.Site.GetPage "/kvcc-summit") (.Site.GetPage "/kvcc-logos-branding-site") (.Site.GetPage "/kvcc-staff-development") (.Site.GetPage "/elizabeth-robinson") }}
+    {{ $pages := slice (.Site.GetPage "/kvcc-employee-portal") (.Site.GetPage "/groceries-list-app") (.Site.GetPage "/kvcc-sign-in") (.Site.GetPage "/kvcc-employee-directory") (.Site.GetPage "/kvcc-online-training") (.Site.GetPage "/kvcc-department-directory") (.Site.GetPage "/kvcc-summit") (.Site.GetPage "/kvcc-logos-branding-site") (.Site.GetPage "/kvcc-staff-development") (.Site.GetPage "/elizabeth-robinson") (.Site.GetPage "/daily-health-app") }}
 
     {{ partial "partials/filter.html" . }}
 
